2010-01-14 Magnus Hagdorn
 * libglide/isostasy.F90: fix bugs were I mixed up array bounds

2010-01-14 Magnus Hagdorn
 * libglide/glide_types.F90: move definition of geothermal heatflux parameter to
   lithot derived type
 * libglide/glide.F90: correctly resolve geothermal heatflux parameter
 * libglide/glide_setup.F90: ditto
 * libglide/lithot.F90: ditto

2010-01-13 Magnus Hagdorn
 * libglide/Makefile.am: rename lithot files and bundle them into a convinience
   library
 * libglide/glide.F90: rename modules
 * libglide/glide_stop.F90: ditto
 * libglide/lithot_vars.def: changed name to lithot
 * libglide/glide_lithot1d.F90 renamed to libglide/lithot1d.F90
 * libglide/glide_lithot3d.F90 renamed to libglide/lithot3d.F90
 * libglide/glide_lithot.F90 renamed to libglide/lithot.F90

2010-01-13 Magnus Hagdorn
 * libglide/glide.F90: use new API for calling isostasy module
 * libglide/glide_types.F90: ditto
 * libglide/isostasy.F90: remove glide_global_type from argument list and use
   isostasy module and the individual fields instead
 * libglide/isostasy_types.F90: isostasy module now has a copy of the coordinate
   system

2010-01-13 Magnus Hagdorn
 * example-drivers/EISMINT-3/src/eismint3_types.F90: use new macros to support
   allocatable arrays as components in derived types
 * example-drivers/eis/src/eis_ela.F90: ditto
 * libglide/glide_setup.F90: ditto
 * libglide/glide_types.F90: ditto
 * libglimmer/glimmer_config.F90: ditto
 * libglimmer/glimmer_horizcoord.F90: ditto
 * libglimmer/glimmer_vertcoord.F90: ditto
 * libglint/glint_interp.F90: ditto
 * libglint/glint_mbal_coupling.F90: ditto
 * libglint/glint_timestep.F90: ditto
 * libglint/glint_type.F90: ditto
 * tests/EISMINT/src/simple_forcing.F90: ditto

2010-01-12 Magnus Hagdorn
 * libglide/glide_setup.F90: also need to setup sigma coordinates when they are
   specified in the configuration file
 * libglide/isostasy_types.F90: fix bug

2010-01-12 Magnus Hagdorn