@@ -14,8 +14,9 @@ libglimmer_eis_la_SOURCES = eis_forcing.F90 eis_ela.F90 eis_temp.F90 eis_slc.F90
                        eis_io.F90 eis_types.F90
 
 eis_glide_SOURCES = eis_glide.F90 
-eis_glide_LDADD = libglimmer-eis.la $(top_builddir)/libglide/libglide.la $(top_builddir)/libglimmer-solve/libglimmer-solve.la \
-                    $(top_builddir)/libglimmer/libglimmer-IO.la $(top_builddir)/libglimmer/libglimmer.la \
+eis_glide_LDADD = libglimmer-eis.la \
+                    $(top_builddir)/libglide/libglide.la $(top_builddir)/libglimmer/libglimmer-IO.la \
+                    $(top_builddir)/libglimmer/libglimmer.la $(top_builddir)/libglimmer-solve/libglimmer-solve.la \
                     $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS) $(BLAS_LIBS)
 
 AM_FCFLAGS = $(NETCDF_FCFLAGS) $(F90_MODFLAG)$(top_builddir)/libglimmer-solve $(F90_MODFLAG)$(top_builddir)/libglide $(F90_MODFLAG)$(top_builddir)/libglimmer
